Adding generators for new forms and actionsgit

--- a/generators/package.json
+++ b/generators/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "handlebars": "^4.0.10",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "mkdirp": "^0.5.1"
   }
 }
