--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^4.0.0-beta",
     "gulp-uglifycss": "^1.0.8",
     "jquery": "^3.2.1",
+    "minimist": "^1.2.0",
     "popper.js": "^1.12.5",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
